--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #a36039;
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
 }
